tweak to prevent overflow on empty search query result

--- a/themes/nudev/src/__PRECOMP/sass/search.scss
+++ b/themes/nudev/src/__PRECOMP/sass/search.scss
@@ -21,7 +21,7 @@ main#nu__search{
 
   width: $wrapper-width;
 
-  $s: $header-height;
+  $s: ($header-height + 1);
   $hh: 100%;
   height: calc(#{$hh} - #{$s});
   height: -miz-calc(#{$hh} - #{$s});
